--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.1.2",
-    "@capacitor/filesystem": "^6.0.1",
+    "@capacitor/filesystem": "^6.0.2",
     "@capacitor/ios": "^6.1.2",
+    "@capacitor/share": "^6.0.3",
     "@capacitor/splash-screen": "^6.0.2",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^6.1.6",
