--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 FAST_REFRESH=false
 PORT=30014
 CHOKIDAR_USEPOLLING=true
-REACT_APP_BASE_API_1=http://127.0.0.1:5003
+REACT_APP_BASE_API=http://127.0.0.1:5003
 REACT_APP_MAIN_BASE=
-REACT_APP_BASE_API=https://invoice-ms.ventureinnovo.com
+REACT_APP_BASE_API_1=https://invoice-ms.ventureinnovo.com
 
 SKIP_PREFLIGHT_CHECK=true 
