--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.2",
